--- a/home.html
+++ b/home.html
@@ -24,14 +24,14 @@
         <div class="dropdown-menu">
             <a href="./televizorebi.html"><i class="fa-solid fa-tv"></i>ტელევიზორები და აუდიო სისტემები</a>
             <a href="./kompiuterebi.html"><i class="fa-solid fa-laptop"></i>კომპიუტერული ტექნიკა და აქსესუარები</a>
-            <a href="#"><i class="fa-solid fa-mobile-screen-button"></i>მობილური-
+            <a href="./telefonebi.html"><i class="fa-solid fa-mobile-screen-button"></i>მობილური-
                 ტელეფორნები და აქსესუარები</a>
-            <a href="#"><i class="fa-regular fa-camera"></i>ფოტო და ვიდეო</a>
-            <a href="#"><i class="fa-solid fa-gamepad"></i>გეიმინგი</a>
-            <a href="#"><i class="fa-regular fa-lightbulb"></i>მსხვილი საყოფაცხოვრებო ტექნიკა</a>
-            <a href="#"><i class="fa-solid fa-comment"></i>სახლის და ეზოს მოვლა</a>
-            <a href="#"><i class="fa-solid fa-hand-holding-heart"></i>თავის მოვლა</a>
-            <a href="#"><i class="fa-solid fa-blender-phone"></i>წვრილი საოჯახო ტექნიკა</a>
+            <a href="./fotodavideo.html"><i class="fa-regular fa-camera"></i>ფოტო და ვიდეო</a>
+            <a href="./geimingi.html"><i class="fa-solid fa-gamepad"></i>გეიმინგი</a>
+            <a href="./msxviliteqnika.html"><i class="fa-regular fa-lightbulb"></i>მსხვილი საყოფაცხოვრებო ტექნიკა</a>
+            <a href="./ezosmovla.html"><i class="fa-solid fa-comment"></i>სახლის და ეზოს მოვლა</a>
+            <a href="./tavismovla.html"><i class="fa-solid fa-hand-holding-heart"></i>თავის მოვლა</a>
+            <a href="./wvriliteqnika.html"><i class="fa-solid fa-blender-phone"></i>წვრილი საოჯახო ტექნიკა</a>
         </div>
     </div>
 
@@ -43,10 +43,12 @@
         <div class="loginandicons">
             <i class="fa-solid fa-cart-arrow-down"></i>
             <i class="fa-regular fa-heart"></i>
+            <a href="./login.html">
             <div class="login">
                 <i class="fa-solid fa-user"></i>
                 <h3>შესვლა</h3>
             </div>
+        </a>
     </header>
     <hr>
 
