--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./televizorebi.css">
+    <title>Alta.ge</title>
+    <link rel="website icon" href="https://madloba.info/media/images/30_Alta_logo.width-500.png" type="png">
+    <link rel="stylesheet" href="./login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
-
 
 
     <header>
@@ -44,7 +44,8 @@
         <div class="loginandicons">
             <i class="fa-solid fa-cart-arrow-down"></i>
             <i class="fa-regular fa-heart"></i>
-            <a href="./login.html">
+        
+        <a href="./login.html">
             <div class="login">
                 <i class="fa-solid fa-user"></i>
                 <h3>შესვლა</h3>
@@ -70,93 +71,45 @@
     </section>
     <hr>
 
+<div class="container">
+        <div class="form-section">
+            <h1>Sign Up</h1>
+            <form id="signupForm">
+                <div class="form-group">
+                    <label for="signup-name">Full Name</label>
+                    <input type="text" id="signup-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="signup-email">Email</label>
+                    <input type="email" id="signup-email" required>
+                </div>
+                <div class="form-group">
+                    <label for="signup-password">Password</label>
+                    <input type="password" id="signup-password" required>
+                </div>
+                <div class="form-group">
+                    <label for="signup-confirm">Confirm Password</label>
+                    <input type="password" id="signup-confirm" required>
+                </div>
+                <button type="submit">Sign Up</button>
+            </form>
+        </div>
 
-
-<div class="box">
-    <div class="filter-card">
-  <div class="section">
-    <h4 class="title">ფასი</h4>
-
-    <div class="range-wrapper">
-      <input type="range" min="0" max="7000" value="69" />
-      <input type="range" min="0" max="7000" value="6499" />
+        <div class="form-section">
+            <h1>Log In</h1>
+            <form id="loginForm">
+                <div class="form-group">
+                    <label for="login-email">Email</label>
+                    <input type="email" id="login-email" required>
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Password</label>
+                    <input type="password" id="login-password" required>
+                </div>
+                <button type="submit">Log In</button>
+            </form>
+        </div>
     </div>
-
-    <div class="price-inputs">
-      <div class="input-box">
-        <label>დან</label>
-        <input type="number" value="69" />
-      </div>
-
-      <div class="input-box">
-        <label>მდე</label>
-        <input type="number" value="6499" />
-      </div>
-    </div>
-  </div>
-
-  <div class="section">
-    <h4 class="title">აქციის ტიპი</h4>
-
-    <div class="search-box">
-      <input type="text" placeholder="ძებნა რა არის..." />
-      <span class="icon">🔍</span>
-    </div>
-
-    <label class="checkbox">
-      <input type="checkbox" />
-      ფასდაკლება
-    </label>
-
-    <label class="checkbox">
-      <input type="checkbox" />
-      საჩუქარი
-    </label>
-  </div>
-</div>
-
-
-
-
-
-
-<div class="cards">
-    <div class="card">
-        <img src="https://imgstore.alta.ge/images/400/72/72558_8326_1.webp" alt="">
-                        <h2>Apple iPhone 17 Pro Max</h2>
-                        <h1>399₾</h1>
-                        <div>
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <button>ყიდვა</button>
-                        </div>
-    </div>
-    <div class="card">
-        <img src="https://imgstore.alta.ge/images/400/72/72558_8326_1.webp" alt="">
-                        <h2>Apple iPhone 17 Pro Max</h2>
-                        <h1>399₾</h1>
-                        <div>
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <button>ყიდვა</button>
-                        </div>
-    </div>
-    <div class="card">
-        <img src="https://imgstore.alta.ge/images/400/72/72558_8326_1.webp" alt="">
-                        <h2>Apple iPhone 17 Pro Max</h2>
-                        <h1>399₾</h1>
-                        <div>
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <button>ყიდვა</button>
-                        </div>
-    </div>
-</div>
-</div>
-</div>
-
-
-
-
-
-
 
 
 <footer>
@@ -181,22 +134,30 @@
     <div class="main">
         <h3 style="color: blueviolet;">გამოგვყევი</h3>
         <h3>--------------------------</h3>
-        <div class="icons">
+        <a href="https://www.facebook.com/alta.ge">
+            <div class="icons">
             <i class="fa-brands fa-facebook"></i>
             <h3>Facebook</h3>
-        </div>
-        <div class="icons">
+            </div>
+        </a>
+        <a href="https://www.instagram.com/alta.ge/#">
+            <div class="icons">
             <i class="fa-brands fa-instagram"></i>
             <h3>Instagram</h3>
         </div>
-        <div class="icons">
+        </a>
+        <a href="https://www.tiktok.com/@alta.ge">
+            <div class="icons">
             <i class="fa-brands fa-tiktok"></i>
             <h3>TikTok</h3>
-        </div>
-        <div class="icons">
+            </div>
+        </a>
+        <a href="https://www.youtube.com/user/altacomputers">
+            <div class="icons">
             <i class="fa-brands fa-youtube"></i>
             <h3>Youtube</h3>
         </div>
+        </a>
     </div>
     <div class="main">
         <h3 style="color: blueviolet;">დაგვიკავშირდით</h3>
@@ -213,15 +174,16 @@
             <i class="fa-solid fa-phone"></i>
             <h3>*3838</h3>
         </div>
-        <div class="icons">
+        <a href="https://www.google.com/maps/search/alta+tbilisi/@41.7274867,44.806763,11z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA2N0gBUAM%3D">
+            <div class="icons">
             <i class="fa-solid fa-location-dot"></i>
             <h3>მაღაზიები</h3>
         </div>
+        </a>
     </div>
-
-
-
 </footer>
+
+
 
 
 </body>
