--- a/msxviliteqnika.html
+++ b/msxviliteqnika.html
@@ -44,10 +44,12 @@
         <div class="loginandicons">
             <i class="fa-solid fa-cart-arrow-down"></i>
             <i class="fa-regular fa-heart"></i>
+            <a href="./login.html">
             <div class="login">
                 <i class="fa-solid fa-user"></i>
                 <h3>შესვლა</h3>
             </div>
+        </a>
     </header>
     <hr>
 
